DSND-2868: Update structured logging (part 1) (#234)
* DSND-2868: Update logger in service

* Make logger static in components
* Address some code smells

* DSND-2868: Remove forbidden handling from controller

* DSND-2868: Ensure DataMapHolder present in logger calls

* Reformatted code in main/java
* Remove context from logger calls as already present in log map

* DSND-2868: Refactor logger intercepter to correctly process request ids

* DSND-2868: Update mongo version for itests

* DSND-2868: Update mongo version to 6.0.19

* DSND-2868: Update request logging filter

* Fix controller exception handler test

* DSND-2868: Use contructor injection in api client impl

* DSND-2868: Fix some code smells

* DSND-2868: Fix wildcard import